--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,6 +28,11 @@ nav.fixed {
   right: 0;
 }
 
+.texts .title {
+  font-weight: bold;
+  font-size: 3.5rem;
+}
+
 nav .navbar-collapse ul li::after{
   content: '';
   width: 0%;
@@ -55,13 +60,13 @@ nav .navbar-collapse ul li:hover::after{
   text-align: center;
   background-image: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.4)
+      rgba(0, 0, 0, 0.6),
+      rgba(1, 10, 3, 0.7)
     ),
     url("../images/tomateacc.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  color: #000;
+  color: #fff;
   margin-top: 50px;
 }
 
@@ -70,8 +75,6 @@ nav .navbar-collapse ul li:hover::after{
   max-width: 90%;
   margin: auto;
   padding: 80px 50px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 10px;
 }
 
 .cards .card {
@@ -590,5 +593,5 @@ section.products {
  }
 }
 .contproduct .card:hover{
-  box-shadow: 0 0 10px black;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
