--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -40,29 +40,79 @@
 		</div>
 	</section>
 
-	<section class="about ptt mt">
+	<section>
 		<div class="container text-center">
-			<h3>Pourquoi nous choisir ?</h3>
+			<h2 style="font-weight:600; margin-bottom: 20px; margin-top:2.5em" class="title">Pourquoi nous choisir ?</h2>
+
 			<br>
-			<p>
+			<p style="opacity:.6; width:700px; max-width:90%; margin: auto">
 				Parce que nous offrons des produits locaux, cultivés sur nos terres. Pour notre santé, consommer des produits locaux offre beaucoup d'avantages :
 			</p>
+			<hr>
+		</div>
+		<div class="container">
+			<div class="row" style="align-items:center; padding-bottom: 5em; padding-top: 2em">
+				<div class="col-md-6">
+					<div class="image">
+						<img style="width:100%" src="{{ asset('images/local.png') }}" alt="description">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<h3 style="font-weight:600; margin-bottom: 20px" class="title">Les aliments locaux ont plus de goûts et sont meilleurs pour la santé</h3>
 
-			<p>
-				<span class="gras">Les aliments locaux ont plus de goûts et sont meilleurs pour la santé</span><br>
-				Les produits et légumes locaux sont souvent plus savoureux. En évitant de les faire venir de loin, ils sont de meilleure qualité et nous offrent une fraîcheur incomparable du fait qu'ils ont été cueillis à point, abattus ou péchés à temps.   
-																					Les fruits et légumes ainsi que les cultures locaux sont généralement plus nutritifs. les distances courtes auxquelles ils font face limitent l'altération des nutriments. En effet, le temps de transport court limite la durée d'entreposage entre la cueillette et l'arrivée en point de vente, ce qui a tendance à altérer les saveurs des aliments. Les produits locaux n'ont pas à supporter de longs trajets, ils sont retirés à maturité et voyage peu avant d'atteindre nos assiettes; plus les aliments sont frais, plus ils nous feront bénéficier de leurs incroyables qualités nutritives.</p>
+					<p style="opacity:.6">
+						Les produits et légumes locaux sont souvent plus savoureux.
+						<br><br>
+						En évitant de les faire venir de loin, ils sont de meilleure qualité et nous offrent une fraîcheur incomparable du fait qu'ils ont été cueillis à point, abattus ou péchés à temps.
+						<br><br>
+						Les fruits et légumes ainsi que les cultures locaux sont généralement plus nutritifs. les distances courtes auxquelles ils font face limitent l'altération des nutriments. En effet, le temps de transport court limite la durée d'entreposage entre la cueillette et l'arrivée en point de vente, ce qui a tendance à altérer les saveurs des aliments.
+						<br><br>
+						Les produits locaux n'ont pas à supporter de longs trajets, ils sont retirés à maturité et voyage peu avant d'atteindre nos assiettes; plus les aliments sont frais, plus ils nous feront bénéficier de leurs incroyables qualités nutritives.</p>
+					<p></p>
 
-			<p>
-				<span class="gras">Les fruits et légumes locaux sont meilleurs pour l'environnement</span><br>Privilégier les fruits et légumes locaux est une décision avant tout écologique. Le transport représente 14% des rejets de gaz à effet de serre dans l'atmosphère. En consommant les produits cultivés chez nous, on réduit les distances parcourues par les aliments, donc, on limite les impacts négatifs du transport sur l'environnement.</p>
+				</div>
+			</div>
+			<div class="row" style="align-items:center; padding-bottom: 5em; padding-top: 2em">
+				<div class="col-md-6">
+					<h3 style="font-weight:600; margin-bottom: 20px" class="title">Les fruits et légumes locaux sont meilleurs pour l'environnement</h3>
 
-			<p>
-				<span class="gras">Cela permet de soutenir l'économie locale</span><br>Manger local, c'est privilégier ce qui pousse chez nous. C'est encourager les producteurs locaux et soutenir l'économie locale dans son ensemble. cela permet également de préserver notre patrimoine, le savoir-faire local, la diversité des cultures, le paysage agricole et la fierté de notre production.</p>
+					<p style="opacity:.6">Privilégier les fruits et légumes locaux est une décision avant tout écologique.
+						<br><br>
+						Le transport représente 14% des rejets de gaz à effet de serre dans l'atmosphère. En consommant les produits cultivés chez nous, on réduit les distances parcourues par les aliments, donc, on limite les impacts négatifs du transport sur l'environnement.</p>
+				</div>
+				<div class="col-md-6">
+					<div class="image">
+						<img style="width:100%" src="{{ asset('images/fruit.png') }}" alt="description">
+					</div>
+				</div>
+			</div>
+			<div class="row" style="align-items:center; padding-bottom: 5em; padding-top: 2em">
+				<div class="col-md-6">
+					<div class="image">
+						<img style="width:100%" src="{{ asset('images/economy.png') }}" alt="description">
+					</div>
+				</div>
+				<div class="col-md-6">
+					<h3 style="font-weight:600; margin-bottom: 20px" class="title">Cela permet de soutenir l'économie locale</h3>
 
-			<p>
-				<span class="gras">C'est moins cher</span><br>Les fruits et légumes locaux ont tendance à être moins chers. Moins coûteux à acheminer, puisqu'il n'y a pas de coûts de transport exorbitants, ils sont vendus moins cher au consommateur final, de quoi alléger considérablement notre portefeuille.</p>
+					<p style="opacity:.6">Manger local, c'est privilégier ce qui pousse chez nous.
+						<br><br>
+						C'est encourager les producteurs locaux et soutenir l'économie locale dans son ensemble. cela permet également de préserver notre patrimoine, le savoir-faire local, la diversité des cultures, le paysage agricole et la fierté de notre production.
+					</p>
+				</div>
+			</div>
+			<div class="row" style="align-items:center; padding-bottom: 5em; padding-top: 2em">
+				<div class="col-md-6">
+					<h3 style="font-weight:600; margin-bottom: 20px" class="title">C'est moins cher</h3>
+
+					<p style="opacity:.6">Les fruits et légumes locaux ont tendance à être moins chers. Moins coûteux à acheminer, puisqu'il n'y a pas de coûts de transport exorbitants, ils sont vendus moins cher au consommateur final, de quoi alléger considérablement notre portefeuille.</p>
+				</div>
+				<div class="col-md-6">
+					<div class="image">
+						<img style="width:100%" src="{{ asset('images/money.png') }}" alt="description">
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
-
-
 {% endblock %}
