--- a/templates/home/about.html.twig
+++ b/templates/home/about.html.twig
@@ -72,15 +72,15 @@
 
 				</div>
 			</div>
-			<div class="row" style="align-items:center; padding-bottom: 5em; padding-top: 2em">
-				<div class="col-md-6">
+			<div class="row grid-mobile" style="align-items:center; padding-bottom: 5em; padding-top: 2em">
+				<div class="col-md-6 mobile-column-2">
 					<h3 style="font-weight:600; margin-bottom: 20px" class="title">Les fruits et légumes locaux sont meilleurs pour l'environnement</h3>
 
 					<p style="opacity:.6">Privilégier les fruits et légumes locaux est une décision avant tout écologique.
 						<br><br>
 						Le transport représente 14% des rejets de gaz à effet de serre dans l'atmosphère. En consommant les produits cultivés chez nous, on réduit les distances parcourues par les aliments, donc, on limite les impacts négatifs du transport sur l'environnement.</p>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 mobile-column-1">
 					<div class="image">
 						<img style="width:100%" src="{{ asset('images/fruit.png') }}" alt="description">
 					</div>
@@ -101,13 +101,13 @@
 					</p>
 				</div>
 			</div>
-			<div class="row" style="align-items:center; padding-bottom: 5em; padding-top: 2em">
-				<div class="col-md-6">
+			<div class="row grid-mobile" style="align-items:center; padding-bottom: 5em; padding-top: 2em">
+				<div class="col-md-6 mobile-column-2">
 					<h3 style="font-weight:600; margin-bottom: 20px" class="title">C'est moins cher</h3>
 
 					<p style="opacity:.6">Les fruits et légumes locaux ont tendance à être moins chers. Moins coûteux à acheminer, puisqu'il n'y a pas de coûts de transport exorbitants, ils sont vendus moins cher au consommateur final, de quoi alléger considérablement notre portefeuille.</p>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 mobile-column-1">
 					<div class="image">
 						<img style="width:100%" src="{{ asset('images/money.png') }}" alt="description">
 					</div>
