--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -35,8 +35,8 @@
 					<p style="opacity:.6">Une alimentation équilibrée mais également de bonne qualité permet de réduire les risques tel que le surpoids, l'obésité, le cancer, les maladies cardiovasculaires ou encore le diabète.</p>
 				</div>
 			</div>
-			<div class="row" style="align-items:center; padding-bottom: 5em; padding-top: 2em">
-				<div class="col-md-6">
+			<div class="row grid-mobile" style="align-items:center; padding-bottom: 5em; padding-top: 2em">
+				<div class="col-md-6 mobile-column-2">
 					<h3 style="font-weight:600; margin-bottom: 20px" class="title">Les critères</h3>
 					<p style="opacity:.6">Quand on parle dietétique, tout le monde a sa petite idée quant aux bonnes pratiques alimentaires. Il faut faire le tri en se basant sur des éléments crédibles émis par des spécialistes.</p>
 					<hr>
@@ -47,7 +47,7 @@
 					<p class="petitdec">
 						<span class="gras">- Quantité</span>: tout aliment apporte des calories, consommé de manière importante, certains peuvent être la source de prise de poids et provoquer des problèmes de santé.</p>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 mobile-column-1">
 					<div class="image">
 						<img style="width:100%" src="{{ asset('images/desc2.png') }}" alt="description">
 					</div>
@@ -61,7 +61,7 @@
 			<div class="texts">
 				<h3 class="title">NOS PRODUITS</h3>
 				<P>Nous offrons des produits de bonne qualité, à vous d'en profitez</P>
-				<a href="produits.html" class="btn-more">Voir plus</a>
+				<a href="{{ path('app_prod') }}" class="btn-more">Voir plus</a>
 			</div>
 		</div>
 	</section>
