--- a/templates/home/products.html.twig
+++ b/templates/home/products.html.twig
@@ -19,10 +19,10 @@
 	<section class="mt">
 		<div class="container text-center">
 			<p>Hormis nos quatre produits principaux ci-dessous, nous en offrons d'autres, prière de
-				<a href="contact.html">nous contacter</a>
+				<a href="/contact">nous contacter</a>
 				pour en savoir plus.
 				<br>Pour ce qui est de la vente, nous vendons au kilo, pour passer commande, n'hésitez pas de
-				<a href="contact.html">nous contacter</a>
+				<a href="/contact">nous contacter</a>
 			</p>
 		</div>
 	</section>
